--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,73 @@
   font-weight: 400;
   font-style: normal;
 }
+
+
+/* shared style */
+.display-flex{
+  display: flex;
+}
+
+
+/* header style */
+
+
+
+/* navbar releted style */
+
+
+
+.navbar{
+ justify-content: space-around;
+ width: 1160px;
+ height: 62px;
+ margin: 0 auto;
+ margin-top: 15px;
+ text-align: center;
+ align-items: center;
+}
+
+.nav-item{
+  list-style: none;
+  margin-right: 32px;
+  font-weight: 700;
+font-size: 1rem;
+
+}
+.nav-img{
+  align-items: center;
+  height: 62px;
+}
+.school-text{
+  font-weight: 700;
+  font-size: 2rem;
+  align-items: center;
+  margin-left:-100px;
+}
+
+
+.primary-button{
+  background-color: #FEA301 ;
+  width: 197px;
+  height: 50px;
+  text-align: center;
+  align-items: center;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  align-items: center;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+.color-1{
+color: #FEA301;
+}
+.color-2{
+color: #01ACFD;
+}
+.color-3{
+color: #05D4DF;
+}
+.color-4{
+color: #5D58EF;
+}
