--- a/style/style.css
+++ b/style/style.css
@@ -77,3 +77,40 @@ color: #05D4DF;
 .color-4{
 color: #5D58EF;
 }
+/* header area */
+.header-section{
+ width: 1162px;
+height: 575px;
+margin: 0 auto;
+justify-content: space-between;
+}
+.header-content-area{
+width: 640px;
+height: 183px;
+
+}
+.content-hading{
+ font-size: 3.5rem;
+font-weight: 700;
+margin-top: 122px;
+}
+.content{
+ width: 640px;
+height: 50px;
+font-size: 1.25rem;
+font-weight: 400;
+margin-top: 18px;
+}
+.content-area-button{
+width: 197px;
+height: 50px;
+font-size: 1.25rem;
+font-weight: 700;
+background-color: black;
+color: white;
+border-radius: 10px;
+border: none;
+margin-top: 10px;
+
+
+}
