--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+}
+  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 
 .quicksand-font {
@@ -7,6 +11,8 @@
   font-weight: 400;
   font-style: normal;
 }
+
+
 
 
 /* shared style */
@@ -26,7 +32,7 @@
 .navbar{
  justify-content: space-around;
  width: 1160px;
- height: 62px;
+ height: 102px;
  margin: 0 auto;
  margin-top: 15px;
  text-align: center;
@@ -77,12 +83,11 @@ color: #05D4DF;
 .color-4{
 color: #5D58EF;
 }
-/* header area */
 .header-section{
- width: 1162px;
+ width: 1160px;
 height: 575px;
 margin: 0 auto;
-justify-content: space-between;
+display: flex;
 }
 .header-content-area{
 width: 640px;
@@ -111,6 +116,171 @@ color: white;
 border-radius: 10px;
 border: none;
 margin-top: 10px;
-
+}
+.curriculum-section{
+  background-image: url(/assets/bg.png);
+  width: 1440px;
+  height: 879px;
+  display: flex;
+}
+.curriculum-heading{
+  
+  margin-top: 60px;
+  margin-bottom: 80px;
+  text-align: center;
+  border: 2px solid green;
+  height: 20px;
 
 }
+.curriculum-section-div{
+  
+  height: 482px;
+  display: flex;
+  margin-top: 40px;
+  justify-content: space-between;
+  margin-left: 180px;
+}
+
+.curriculum-div-1{
+  margin-top: 200px;
+  width: 367px;
+  height: 476px;
+  margin-right: 28px;
+  border: 1px solid green;
+  border: none;
+  border-radius: 20px;
+  background: linear-gradient(#FFF4DC,#FFFFFF);
+}
+.color-gr-1{
+   background: linear-gradient(#DEF5FF,#FFFFFF);
+}
+.color-gr-2{
+   background: linear-gradient(#FFF4DC,#FFFFFF);
+}
+.color-gr-3{
+   background: linear-gradient(#F2E8FF,#FFFFFF);
+}
+
+.curriculum-section-img{
+  width: 136px;
+  height: 136px;
+  padding: 52px 115px 0px 115px;
+ text-align: center;
+}
+.curriculum-section-4{
+  font-size: 1.5rem;
+  text-align: center;
+}
+.curriculum-section-content{
+   
+   font-size: 1rem;
+   width: 270px;
+   height: 74px;
+   text-align: center;
+   padding: 33px 40px 0px 40px;
+   color: #808080;
+}
+.read-1,.read-2,.read-3{
+  margin-top: 50px;
+  text-align: center;
+  : 33px 91px 0px 91px;
+}
+.read-1{
+  color: #64C8FF;
+}
+.read-2{
+  color:#F0AA00;
+}
+.read-3{
+  color: #8700FF;
+}
+.hide{
+  display: none;
+}
+@media screen and (max-width: 576px) {
+  
+  
+  .navbar{
+ flex-direction: column;
+ width: 95vh;
+ margin: auto;
+ text-align: left;
+ align-items: center;
+ height: 100px;
+ border-bottom: 2px solid #FEA301 ;
+ margin-bottom: 200px;
+ 
+}
+.nav-links{
+  flex-direction: column;
+  display: none;
+
+}
+.nav-img{
+  margin-left: -550px;
+}
+.school-text{
+  display: none;
+}
+.primary-button{
+  display: none;
+}
+.header-section{
+  flex-direction: column;
+   flex-direction: column-reverse;
+}
+.main-img{
+ 
+  margin-top: -200px;
+   margin-left: 15px;
+  margin-right: 8px;
+  width: 90vw;
+  margin-bottom: 40px;
+ 
+  
+  
+}
+.color-1{
+  margin-left: 120px;
+}
+.content-hading{
+   width: 90vw;
+   margin-top: -5px;
+   margin-left: 15px;
+   font-size: 2.5rem;
+   
+}
+.content{
+   width: 90vw;
+   margin-left: 15px;
+}
+.content-area-button{
+  width: 90vw;
+  margin-top: 40px;
+  margin-left: 15px;
+  
+}
+
+.curriculum-heading{
+  display: none;
+}
+.curriculum-section-div{
+  flex-direction: column;
+  width: 95vw;
+  padding-left: 60px;
+  margin-left: 1px;
+
+ 
+}
+.curriculum-div-1{
+   margin-bottom: -150px;
+}
+.read-1,.read-2,.read-3{
+  margin-bottom: 50px;
+}
+
+}
+
+
+
+
