--- a/style/style.css
+++ b/style/style.css
@@ -160,7 +160,7 @@ header .contact-btn {
 }
 
 .card-img{
-  margin-right: 110px;
+  margin-right: 10px;
   margin-top: 30px;
 }
 
@@ -191,14 +191,27 @@ header .contact-btn {
 .read-1{
   margin-top: 30px;
  text-align: center;
- color:  #F0AA00;
+ color: #F0AA00;
   
 }
 
 .curriculum .card .read-1 {
   text-decoration: none;
- color: #007bff;
+ color: #F0AA00;
   font-weight: bold;
+}
+#middle{
+  width: 220px;
+}
+
+#point-1{
+  color: #64C8FF;
+}
+#point-2{
+color: #F0AA00;
+}
+#point-3{
+color: #8700FF;
 }
 
 .arrow-simbole {
@@ -255,7 +268,7 @@ width: 60px;
   width: 1440px;
   height: 1018px;
   background: linear-gradient(#FFFFFF, #fff4e0);
-  background-image: url(assets/bg.png);
+ background-image: url(assets/bg.png); 
   
   
   
