--- a/style/style.css
+++ b/style/style.css
@@ -278,6 +278,7 @@ width: 60px;
   font-size: 2.5rem;
   font-weight: 400px;
   margin: 60px 0px 80px 0px;
+ 
 
 }
 
@@ -652,10 +653,12 @@ width: 60px;
   display: none;
 }
 .Our-Stories-heading{
-  margin-top: -200px;
-  max-width: 200px;
+  
+  max-width: 400px;
   position: relative;
- display: none;
+  left: 500px;
+  top: 280px;
+  margin-bottom: -70px;
   
 }
 .our-stories-section{
@@ -663,6 +666,7 @@ width: 60px;
   top: 120px;
   right: 30px;
   max-width: 358px;
+
 }
 .view-all{
   position: relative;
